<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView style="@style/tw_main_title"
        android:id="@+id/weatherTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/weather" />



    <LinearLayout
        android:id="@+id/weatherControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherTitle"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/city"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_city"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/show"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherControl"
        android:orientation="vertical"
        >


        <Switch style="@style/main_switch"
            android:id="@+id/swWeatherText"
            android:text="@string/swWeather" />

        <Switch style="@style/main_switch"
            android:id="@+id/swHumidity"
            android:text="@string/swHumidity" />
    </LinearLayout>

</RelativeLayout>